<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <!-- Notifications -->
        <Switch
            android:id="@+id/switchNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_notifications"
            android:layout_marginTop="24dp"/>


        <Switch
            android:id="@+id/switchDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:layout_marginTop="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textStyle="bold"
            android:layout_marginTop="18dp"/>

        <RadioGroup
            android:id="@+id/radioLang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/rbEn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"/>

            <RadioButton
                android:id="@+id/rbAr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                android:layout_marginStart="18dp"/>
        </RadioGroup>

        <!-- Edit Profile -->
        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:layout_marginTop="24dp"/>

        <!-- Logout -->
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginTop="12dp"/>

    </LinearLayout>
</ScrollView>