<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_bookings"
        android:textSize="22sp"
        android:textStyle="bold" />

    <!-- Tabs: Active / Past -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnActive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/active"
            app:cornerRadius="14dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:text="@string/past"
            app:cornerRadius="14dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/showing_count_zero"
        android:textSize="12sp"
        android:textColor="#777777"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerBookings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_bookings_here"
        android:gravity="center"
        android:padding="20dp"
        android:visibility="gone"
        android:textStyle="bold" />

</LinearLayout>